--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,6 @@
 TODO-
 Mangrove tree stuff
-All mangrove wooden material and items.
+All mangrove material and items.
 1)propagule
 2)roots
 3)boat with chest
